--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,79 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+ul, ol, menu {
+    list-style-type: none;
+}
+
+/* Body */
+body {
+    background-color: #1E1E1E;
+}
+
+/* Container */
+.container {
+    max-width: 1200px;
+}
+
+/* Main */
+.main-content {
+    padding-top: 100px;
+}
+
+/* Lista di film */
+.list {
+    padding: 0px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+/* Elementi della lista di film */
+.list-item {
+    flex-basis: calc((100% / 3) - (30px * (2 / 3)));
+}
+
+/* Carta */
+.card {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    cursor: pointer;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+/* Testa della carta */
+.card__head {
+    width: 100%;
+    height: 100%;
+}
+
+/* Immagine della carta */
+.card__image {
+    width: 100%;
+    display: block;
+    object-position: top;
+    object-fit: contain;
+}
+
+/* Corpo della carta */
+.card__body {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    color: white;
+    display: none;
+    flex-direction: column;
+    gap: 20px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+}
+
+/* Hover della carta */
+.card:hover .card__body {
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
+}
